--- a/libcore/SKCore.xcodeproj/xcshareddata/xcschemes/SKCore.xcscheme
+++ b/libcore/SKCore.xcodeproj/xcshareddata/xcschemes/SKCore.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -49,6 +49,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B22E88A617C36789005D9094"
+            BuildableName = "libSKCore.a"
+            BlueprintName = "SKCore"
+            ReferencedContainer = "container:SKCore.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
