--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Breakpoints.xcbkptlist
 WorkspaceSettings.xcsettings
 libcore/SKCore.xcodeproj/project.xcworkspace/xcshareddata/SKCore.xccheckout
 libcore/SKCore.xcodeproj/xcuserdata/pcole.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+SKCore.xcscmblueprint
